# Voice-Controlled-Wheelchair

./: CMakeLists.txt  DEV.cpp  DSA  Links.txt  MotionChair1_DSA.C  OneMotor_1_BL.c  PiMotor.cpp  PiMotor.h  README.md  References.txt  TwoMotor_1_BL.c  motor.cpp  new.cpp
Remote Controoled/: Classes.cpp  main.cpp  program
Voice controlled/: Classes.h  main.cpp  program  voice test.cpp
